--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
 <meta charset="utf-8">
-<title>第一次提交</title>
+<title>...</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+<meta name="description" content="">
+<meta name="publish_date" content="">
+<meta name="modify_date" content="">
+<script>$LOC = ""</script>
 </head>
 
 <body>
-<p>第一次提交</p>
+<header></header>
+<main>
+	<section>...</section>
+</main>
+<aside></aside>
+<footer></footer>
 </body>
 </html>
